<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_centerVertical="true"
    android:layout_height="match_parent"
    tools:context=".activity.DangKyActivity">
    <TextView
        android:id="@+id/dangki"
        android:text="Đăng kí"
        android:textSize="25sp"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:padding="5dp"
        android:textColor="@color/colortext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/line1"
        app:layout_constraintTop_toBottomOf="@+id/dangki"
        android:layout_marginTop="5dp"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/email"
            android:hint="@string/email"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:inputType="textEmailAddress"
            android:drawableLeft="@drawable/ic_email"
            android:drawablePadding="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/line8"
        app:layout_constraintTop_toBottomOf="@+id/line1"
        android:layout_marginTop="5dp"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/username"
            android:hint="@string/username"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:inputType="textEmailAddress"
            android:drawableLeft="@drawable/ic_baseline_person_24"
            android:drawablePadding="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/line2"
        app:layout_constraintTop_toBottomOf="@+id/line8"
        android:layout_marginTop="5dp"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/pass"
            android:hint="@string/password"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:inputType="textPassword"
            android:drawableLeft="@drawable/ic_vpn_key_24"
            android:drawablePadding="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/line3"
        app:layout_constraintTop_toBottomOf="@+id/line2"
        android:layout_marginTop="5dp"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/repass"
        android:hint="@string/confrim_password"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:inputType="textPassword"
        android:drawableLeft="@drawable/ic_vpn_key_24"
        android:drawablePadding="5dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/line4"
        app:layout_constraintTop_toBottomOf="@+id/line3"
        android:layout_marginTop="5dp"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/mobile"
            android:hint="@string/mobile"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:inputType="text"
            android:drawableLeft="@drawable/ic_phone_24"
            android:drawablePadding="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </com.google.android.material.textfield.TextInputLayout>
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btndangki"
        app:layout_constraintTop_toBottomOf="@+id/line4"
        android:background="@drawable/background_button"
        android:layout_marginRight="25dp"
        android:layout_marginLeft="25dp"
        android:layout_marginTop="10dp"
        android:text="Đăng kí"
        android:textSize="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <LinearLayout
        app:layout_constraintTop_toBottomOf="@+id/btndangki"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="20dp"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:textSize="15sp"
            android:text="Đã có tài khoản "
            android:textColor="@android:color/black"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <TextView
            android:id="@+id/txtdangnhap"
            android:textSize="18sp"
            android:text="Đăng nhập"
            android:textStyle="bold"
            android:layout_marginLeft="5dp"
            android:textColor="#1745EC"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>