<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.ChiTietActivity">
    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toobar"
        android:background="#3AD541"
        app:title="Chi tiết sản phẩm"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize">
        <FrameLayout
            android:id="@+id/framgiohang"
            android:layout_gravity="right"
            android:layout_marginRight="20dp"
            android:layout_width="55dp"
            android:layout_height="?attr/actionBarSize">
            <com.nex3z.notificationbadge.NotificationBadge
                android:id="@+id/menu_sl"
                android:layout_gravity="top|right"
                android:layout_width="25dp"
                android:layout_height="25dp"/>
            <ImageView
                android:id="@+id/giohangid"
                android:layout_marginTop="15dp"
                android:src="@drawable/ic_cart_24"
                android:layout_width="40dp"
                android:layout_height="40dp"/>
        </FrameLayout>
    </androidx.appcompat.widget.Toolbar>

    <LinearLayout
        android:id="@+id/layout1"
        android:layout_marginTop="5dp"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@id/toobar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ImageView
            android:id="@+id/imgchitiet"
            android:src="@drawable/icon_new_w512"
            android:layout_width="150dp"
            android:layout_height="200dp"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginLeft="5dp">
            <TextView
                android:id="@+id/txttensp"
                android:textSize="20sp"
                android:textStyle="bold"
                android:gravity="center"
                android:textColor="@android:color/black"
                android:text="@string/ten_sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
            <TextView
                android:id="@+id/txtgiasp"
                android:textSize="15sp"
                android:textStyle="bold"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="5dp"
                android:textColor="@android:color/holo_red_light"
                android:text="@string/gia_sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
            <Spinner
                android:id="@+id/spinner"
                android:layout_marginTop="5dp"
                android:layout_marginStart="50dp"
                android:layout_marginEnd="50dp"
                android:gravity="center"
                android:background="@drawable/spinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"></Spinner>
            <Button
                android:id="@+id/btnthemvaogiohang"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="15dp"
                android:layout_marginTop="5dp"
                android:textColor="@android:color/white"
                android:backgroundTint="#24BCAA"
                android:text="@string/btn_them"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:orientation="vertical"
        android:layout_marginTop="5dp"
        app:layout_constraintTop_toBottomOf="@id/layout1"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_width="match_parent"
        android:layout_height="0dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="5dp"
            android:text="@string/mo_ta"
            android:textColor="@android:color/black"
            android:textSize="18sp"
            android:textStyle="bold" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/txtmotachitiet"
                android:layout_marginTop="5dp"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="20dp"

                android:textColor="@android:color/black"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

        </ScrollView>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>