<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.ThanhToanActivity">
    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toobar"
        app:title="Thanh toán"
        android:background="#36DD07"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"/>
    <androidx.cardview.widget.CardView
        app:cardCornerRadius="5dp"
        android:id="@+id/cardview"
        android:layout_margin="5dp"
        android:elevation="8dp"
        app:layout_constraintTop_toBottomOf="@+id/toobar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp">
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <LinearLayout
                android:padding="5dp"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView

                    android:layout_marginLeft="5dp"
                    android:text="@string/tong_tien"
                    android:textSize="15sp"
                    android:textStyle="bold"
                    android:textColor="@android:color/black"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
                <TextView
                    android:id="@+id/txttongtien"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="25000"
                    android:textSize="15sp"
                    android:layout_marginLeft="20dp"
                    android:textColor="@android:color/holo_red_light"/>

            </LinearLayout>
            <View
                android:layout_marginTop="5dp"
                android:background="@android:color/darker_gray"
                android:layout_width="match_parent"
                android:layout_height="1dp"/>
            <LinearLayout
                android:padding="5dp"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_marginLeft="5dp"
                    android:text="@string/so_dt"
                    android:textSize="15sp"
                    android:textStyle="bold"
                    android:textColor="@android:color/black"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
                <TextView
                    android:id="@+id/txtSodt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="0343724420"
                    android:textSize="15sp"
                    android:layout_marginLeft="20dp"
                    android:textColor="@android:color/holo_red_light"/>

            </LinearLayout>
            <View
                android:layout_marginTop="5dp"
                android:background="@android:color/darker_gray"
                android:layout_width="match_parent"
                android:layout_height="1dp"/>
            <LinearLayout
                android:padding="5dp"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_marginLeft="5dp"
                    android:text="@string/email"
                    android:textSize="15sp"
                    android:textStyle="bold"
                    android:textColor="@android:color/black"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
                <TextView
                    android:id="@+id/txtEmail"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="0343724420"
                    android:textSize="15sp"
                    android:layout_marginLeft="20dp"
                    android:textColor="@android:color/holo_red_light"/>

            </LinearLayout>
            <View
                android:layout_marginTop="5dp"
                android:background="@android:color/darker_gray"
                android:layout_width="match_parent"
                android:layout_height="1dp"/>
        </LinearLayout>


    </androidx.cardview.widget.CardView>
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/layoutInput"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginTop="5dp"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        app:layout_constraintTop_toBottomOf="@+id/cardview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editDiaChi"
            android:drawableLeft="@drawable/ic_location"
            android:drawablePadding="5dp"
            android:hint="Nhập địa chỉ giao hàng"
            app:errorTextColor="@android:color/holo_red_light"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </com.google.android.material.textfield.TextInputLayout>
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btndathang"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@+id/layoutInput"
        android:background="@drawable/background_button"
        android:text="Đặt hàng"
        android:textSize="20dp"
        android:textColor="@android:color/white"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginBottom="5dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

</androidx.constraintlayout.widget.ConstraintLayout>